Fix profile info wrapping

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -57,7 +57,7 @@ ul.task-list input[type="checkbox"] {
 
 .profile {
   width: auto;
-  max-width: 240px;
+  max-width: 340px;
 
   .profile-image {
     width: 175px;
@@ -67,9 +67,10 @@ ul.task-list input[type="checkbox"] {
   .more-info {
     margin-bottom: 6px;
     margin-top: 8px;
-    font-family: monospace;
-    line-height: 1.25;
-    width: 240px;
+    font-family: inherit;
+    font-size: 0.95rem;
+    line-height: 1.3;
+    width: 320px;
 
     p {
       display: block;
@@ -106,7 +107,7 @@ ul.task-list input[type="checkbox"] {
     .more-info {
       flex: 1 1 auto;
       text-align: left;
-      font-size: 0.9rem;
+      font-size: 0.88rem;
       margin-top: 0;
       min-width: 0;
       width: auto;
@@ -122,8 +123,16 @@ ul.task-list input[type="checkbox"] {
 @media (min-width: 576px) {
   .profile {
     width: auto;
-    max-width: 240px;
+    max-width: 340px;
     display: block;
+
+    .more-info {
+      width: 320px;
+
+      p {
+        white-space: nowrap;
+      }
+    }
 
     .address {
       p {
